<resources>
    <string name="app_name">NSAgenda</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Preferencias</string>
    <string name="addTask">Añadir tarea</string>
    <string name="modifyTask">Modificar tarea</string>
    <string name="showTasks">Ver tareas</string>
    <string name="manageTasks">Gestionar tareas</string>
    <string name="other">Otros</string>
    <string name="showLocation">Ver localización GPS</string>
    <string name="play">Jugar</string>
    <string name="showContacts">Ver contactos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
