<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/manageTasks">
        <menu>
            <item
                android:id="@+id/mostrarTareas"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/showTasks" />
            <item
                android:id="@+id/addTarea"
                android:icon="@drawable/icon_add_tarea"
                android:title="@string/addTask" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/editarUsuario"
                android:icon="@drawable/icon_editar_usuario"
                android:title="@string/editUser" />
            <item
                android:id="@+id/mostrarLocalizacion"
                android:icon="@drawable/icon_gps"
                android:title="@string/showLocation" />
            <item
                android:id="@+id/mostrarContactos"
                android:icon="@drawable/icon_contactos"
                android:title="Mostrar contactos" />
            <item
                android:id="@+id/jugar"
                android:icon="@drawable/icon_jugar"
                android:title="@string/play" />
        </menu>
    </item>

</menu>
